--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,13 +5,23 @@
     "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app>
-
 	<servlet>
 		<servlet-name>LoginServlet</servlet-name>
 		<servlet-class>info.servletTest.LoginServlet</servlet-class>
     </servlet>
+
+	<servlet>
+		<servlet-name>SearchServlet</servlet-name>
+		<servlet-class>info.search.java_mysql.SearchServlet</servlet-class>
+	</servlet>
+
 	<servlet-mapping>
 		<servlet-name>LoginServlet</servlet-name>
 		<url-pattern>/Login</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>SearchServlet</servlet-name>
+		<url-pattern>/Search</url-pattern>
 	</servlet-mapping>
 </web-app>
