--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/info/search/java_mysql/EditServlet.java=UTF-8
+encoding//src/info/search/java_mysql/SearchServlet.java=UTF-8
+encoding//src/info/search/java_mysql/ShainBeans.java=UTF-8
 encoding//src/info/servletTest/LoginServlet.java=MS932
