--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,6 +15,12 @@
 		<servlet-class>info.search.java_mysql.SearchServlet</servlet-class>
 	</servlet>
 
+	<servlet>
+		<servlet-name>EditServlet</servlet-name>
+		<servlet-class>info.search.java_mysql.EditServlet</servlet-class>
+    </servlet>
+
+
 	<servlet-mapping>
 		<servlet-name>LoginServlet</servlet-name>
 		<url-pattern>/Login</url-pattern>
@@ -23,5 +29,10 @@
 	<servlet-mapping>
 		<servlet-name>SearchServlet</servlet-name>
 		<url-pattern>/Search</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>EditServlet</servlet-name>
+		<url-pattern>/Edit</url-pattern>
 	</servlet-mapping>
 </web-app>
