--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -7,32 +7,49 @@
 <web-app>
 	<servlet>
 		<servlet-name>LoginServlet</servlet-name>
-		<servlet-class>info.servletTest.LoginServlet</servlet-class>
+		<servlet-class>info.search.java_mysql.LoginServlet</servlet-class>
     </servlet>
-
+	<servlet>
+		<servlet-name>LogoutServlet</servlet-name>
+		<servlet-class>info.search.java_mysql.LogoutServlet</servlet-class>
+    </servlet>
 	<servlet>
 		<servlet-name>SearchServlet</servlet-name>
 		<servlet-class>info.search.java_mysql.SearchServlet</servlet-class>
 	</servlet>
-
 	<servlet>
 		<servlet-name>EditServlet</servlet-name>
 		<servlet-class>info.search.java_mysql.EditServlet</servlet-class>
     </servlet>
 
+<!--
+	<servlet>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>info.servletTest.LoginServlet</servlet-class>
+    </servlet>
+-->
 
 	<servlet-mapping>
 		<servlet-name>LoginServlet</servlet-name>
 		<url-pattern>/Login</url-pattern>
 	</servlet-mapping>
-
+	<servlet-mapping>
+		<servlet-name>LogoutServlet</servlet-name>
+		<url-pattern>/Logout</url-pattern>
+	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>SearchServlet</servlet-name>
 		<url-pattern>/Search</url-pattern>
 	</servlet-mapping>
-
 	<servlet-mapping>
 		<servlet-name>EditServlet</servlet-name>
 		<url-pattern>/Edit</url-pattern>
 	</servlet-mapping>
+
+<!-- 
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/Login</url-pattern>
+	</servlet-mapping>
+-->
 </web-app>
